--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>房地產藤本計算器</title>
+    <title>房地產謄本計算器</title>
     <style>
         :root {
             --primary-color: #2c3e50;
